--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,11 +3,11 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="group_schedule">
+        그룹의 모임을 표시하는 란
+     </string>
     <string name="group_notice">
         그룹의 공지를 표시하는 란
-     </string>
-    <string name="group_member">
-        그룹 멤버란
     </string>
     <string name="group_post">
         그룹 포스트란
