그룹 참여하기 UI 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,9 @@
     <!--dialog_group_add-->
     <string name="form_group_title">그룹 이름</string>
 
+    <!--dialog_group_enter-->
+    <string name="form_group_code">그룹 코드</string>
+
     <string name="menu_settings">설정</string>
     <string name="transitionName">GroupImageName</string>
 </resources>
